# QME-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  code_list.json  docker-compose.yml  item_tower.onnx  num_stats.json  profile_list.json  pyproject.toml  storage.yml  student_tower.onnx
.github/workflows/: deploy.yml  lint.yml  tests.yml
backend/: __main__.py  app.py  business_logic.py  config.py  demo_recommendation.py  generate_embeddings.py  parse_choose.py  parse_course.py  parse_students.py  setup.py
backend/api/auth/: api.py
backend/api/healthcheck/: healthcheck.py
backend/api/router/: __init__.py  auth.py  elective.py  health.py  journal.py  logs.py  manager.py  optimal.py  recomendation.py  reports.py  student.py  transfer.py  upload.py
backend/config/: settings.yml
backend/data/: courses_clusters.json  parsed_questions.xlsx
backend/database/: database.py  redis.py
backend/database/alembic/: env.py
backend/database/models/: __init__.py  elective.py  group.py  journal.py  log.py  manager.py  report.py  student.py  transfer.py
backend/logger/: formatter.py  logger.py
backend/logic/use_cases/: authorize_code.py  confirm_code.py  create_transfer.py  optimize_transfers.py
backend/optimization/: data_for_optimization.py  data_prep.py  generate_transfers.py  ilp_method.py
backend/project/: config.py
backend/project/providers/: db.py  healthcheck.py
backend/schemas/: elective.py
backend/services/code_service/: base.py
backend/services/sender_service/: base.py
backend/services/student_service/: base.py
backend/tests/: test_services.py
backend/use_cases/: confirm_code.py
backend/utils/: time_measure.py
backend/views/: api.py
(+32 files in other folders)
