[tool.poetry]
name = "qme-backend"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
uvicorn = "^0.32.0"
dynaconf = "^3.2.6"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-json-logger = "^3.2.1"
dishka = "^1.4.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
