[tool.poetry]
name = "qme-backend"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
uvicorn = "^0.32.0"
dynaconf = "^3.2.6"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.5"
pulp = "^3.1.1"
ortools = "^9.12.4544"
pgvector = "^0.4.1"
greenlet = "^3.2.2"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
